--- a/cv.css
+++ b/cv.css
@@ -168,6 +168,7 @@ li{
 .socialButtons {
     flex-direction: column;
     align-items: center;
+    justify-self: center;
     position: absolute;
     padding:0.3em;
     border: #000000 2px solid;
@@ -177,14 +178,19 @@ li{
     width:10vw;
     height:fit-content
 }
-.socialButtons button:hover{
-    border-radius: 5px;
-    width:100%;
-}
 .socialButtons button{
-    border-radius: 80px;
-    width:100%;
+    border-radius: 10px;
+
+    width:inherit;
+    justify-content: center;
 }
+.socialButtons tr{max-width: inherit;}
+.socialButtons button:hover{
+    border-radius: 30px;
+    width:fit-content;
+    justify-content: center;
+}
+
 
 .footer button:hover,.Team button:hover{
     width: auto;
